@@ -42,34 +42,11 @@ import static org.mockito.ArgumentMatchers.any;
 
 @ExtendWith(MockitoExtension.class)
 public class CarePlanServiceTest {
-
-
     private static final String ORGANISATION_ID_1 = "";
     private static final String ORGANISATION_ID_2 = "";
-    @InjectMocks
-    private CarePlanService subject;
-
-    @Mock
-    private FhirClient fhirClient;
-
-    @Mock
-    private FhirMapper fhirMapper;
-
-    @Mock
-    private DateProvider dateProvider;
-
-    @Mock
-    private AccessValidator accessValidator;
-
-    @Mock
-    private CustomUserClient customUserService;
-
     private static final String CPR_1 = "0101010101";
     private static final String CPR_2 = "0202020202";
-
-
     private static final String ORGANIZATION_ID_1 = "Infektionsmedicinsk";
-
     private static final String CAREPLAN_ID_1 = "CarePlan/careplan-1";
     private static final String CAREPLAN_ID_2 = "CarePlan/careplan-2";
     private static final String PATIENT_ID_1 = "Patient/patient-1";
@@ -78,35 +55,34 @@ public class CarePlanServiceTest {
     private static final String PLANDEFINITION_ID_2 = "PlanDefinition/plandefinition-2";
     private static final String QUESTIONNAIRE_ID_1 = "Questionnaire/questionnaire-1";
     private static final String QUESTIONNAIRE_ID_2 = "Questionnaire/questionnaire-2";
-
     private static final Instant POINT_IN_TIME = Instant.parse("2021-11-23T10:00:00.000Z");
 
-    /*
-    @Test
-    public void createCarePlan_patientExists_patientIsNotCreated() throws Exception {
-        
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
+    @InjectMocks
+    private CarePlanService subject;
+    @Mock
+    private FhirClient fhirClient;
+    @Mock
+    private FhirMapper fhirMapper;
+    @Mock
+    private DateProvider dateProvider;
+    @Mock
+    private AccessValidator accessValidator;
+    @Mock
+    private CustomUserClient customUserService;
 
-        CarePlan carePlan = new CarePlan();
-        Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
-
-        Patient patient = new Patient();
-        patient.setId(PATIENT_ID_1);
-        Mockito.when(fhirClient.lookupPatientByCpr(CPR_1)).thenReturn(Optional.of(patient));
-
-        boolean onlyActiveCarePlans = true;
-        Mockito.when(fhirClient.lookupCarePlansByPatientId(PATIENT_ID_1, onlyActiveCarePlans)).thenReturn(FhirLookupResult.fromResources());
-
-        Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
-
-        
-        String result = subject.createCarePlan(carePlanModel);
-
-        
-        Mockito.verify(fhirClient).saveCarePlan(carePlan);
+    private static Stream<Arguments> getCarePlansWithUnsatisfiedSchedules_sortCareplans_byPatientName() {
+        HumanName a_a = new HumanName().addGiven("a").setFamily("a");
+        HumanName a_b = new HumanName().addGiven("a").setFamily("b");
+        HumanName b_a = new HumanName().addGiven("b").setFamily("a");
+        HumanName b_b = new HumanName().addGiven("b").setFamily("b");
+        return Stream.of(
+                //getPointInTime_initializedWithSeed
+                Arguments.of(a_a, a_b, List.of(a_a, a_b)),
+                Arguments.of(a_b, a_a, List.of(a_a, a_b)),
+                Arguments.of(b_a, b_b, List.of(b_a, b_b)),
+                Arguments.of(b_b, b_a, List.of(b_a, b_b))
+        );
     }
-    */
-
 
     @Test
     @MockitoSettings(strictness = Strictness.LENIENT)
@@ -115,7 +91,6 @@ public class CarePlanServiceTest {
         Mockito.when(customUserService.createUser(any())).thenThrow(JsonProcessingException.class);
 
         try {
-
             CarePlanModel carePlanModel = buildCarePlanModel();
 
             CarePlan carePlan = new CarePlan();
@@ -133,7 +108,6 @@ public class CarePlanServiceTest {
 
             Mockito.when(fhirClient.saveCarePlan(any())).thenReturn("1");
 
-
             String result = subject.createCarePlan(carePlanModel);
             fail("No error was thrown");
         } catch (ServiceException e) {
@@ -144,29 +118,22 @@ public class CarePlanServiceTest {
 
     @Test
     public void createCarePlan_patientDoesNotExist_patientIsCreated() throws Exception {
-
         CarePlanModel carePlanModel = buildCarePlanModel();
 
         CarePlan carePlan = new CarePlan();
-        Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
-
         Patient patient = new Patient();
+
+        Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
         Mockito.when(fhirMapper.mapPatientModel(carePlanModel.getPatient())).thenReturn(patient);
-
         Mockito.when(fhirClient.lookupPatientByCpr(CPR_1)).thenReturn(Optional.empty());
-
         Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
 
-
-        String result = subject.createCarePlan(carePlanModel);
-
-
+        subject.createCarePlan(carePlanModel);
         Mockito.verify(fhirClient).saveCarePlan(carePlan, patient);
     }
 
     @Test
     public void createCarePlan_activePlanExists_throwsException() throws Exception {
-
         CarePlanModel carePlanModel = buildCarePlanModel();
 
         Patient patient = new Patient();
@@ -178,49 +145,24 @@ public class CarePlanServiceTest {
         boolean onlyActiveCarePlans = true;
         Mockito.when(fhirClient.lookupCarePlansByPatientId(PATIENT_ID_1, onlyActiveCarePlans)).thenReturn(lookupResult);
 
-
         assertThrows(ServiceException.class, () -> subject.createCarePlan(carePlanModel));
     }
 
     @Test
     public void createCarePlan_questionnaireAccessViolation_throwsException() throws Exception {
-
         CarePlanModel carePlanModel = buildCarePlanModel(List.of(), List.of(QUESTIONNAIRE_ID_1));
-
         Mockito.when(fhirClient.lookupPatientByCpr(CPR_1)).thenReturn(Optional.empty());
-
         Questionnaire questionnaire = new Questionnaire();
         FhirLookupResult lookupResult = FhirLookupResult.fromResource(questionnaire);
         Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(lookupResult);
-
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(List.of(questionnaire));
-
-
-        assertThrows(AccessValidationException.class, () -> subject.createCarePlan(carePlanModel));
-    }
-
-    @Test
-    public void createCarePlan_planDefinitionAccessViolation_throwsException() throws Exception {
-
-        CarePlanModel carePlanModel = buildCarePlanModel(List.of(PLANDEFINITION_ID_1), List.of());
-
-        Mockito.when(fhirClient.lookupPatientByCpr(CPR_1)).thenReturn(Optional.empty());
-
-        PlanDefinition planDefinition = new PlanDefinition();
-        FhirLookupResult lookupResult = FhirLookupResult.fromResource(planDefinition);
-        Mockito.when(fhirClient.lookupPlanDefinitionsById(List.of(PLANDEFINITION_ID_1))).thenReturn(lookupResult);
-
-        Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(List.of(planDefinition));
-
-
         assertThrows(AccessValidationException.class, () -> subject.createCarePlan(carePlanModel));
     }
 
     /*
     @Test
     public void createCarePlan_success() throws Exception {
-        
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
+        CarePlanModel carePlanModel = buildCarePlanModel();
 
         CarePlan carePlan = new CarePlan();
         Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
@@ -234,12 +176,9 @@ public class CarePlanServiceTest {
         Mockito.when(fhirClient.lookupCarePlansByPatientId(PATIENT_ID_1, onlyActiveCarePlans)).thenReturn(lookupResult);
 
         Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
-
         Mockito.when(fhirClient.saveCarePlan(any())).thenReturn("1");
 
-        
         String result = subject.createCarePlan(carePlanModel);
-
         
         assertEquals("1", result);
     }
@@ -247,7 +186,7 @@ public class CarePlanServiceTest {
     @Test
     public void createCarePlan_persistingFails_throwsException() throws Exception {
         
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
+        CarePlanModel carePlanModel = buildCarePlanModel();
 
         CarePlan carePlan = new CarePlan();
         Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
@@ -258,21 +197,16 @@ public class CarePlanServiceTest {
 
         boolean onlyActiveCarePlans = true;
         Mockito.when(fhirClient.lookupCarePlansByPatientId(PATIENT_ID_1, onlyActiveCarePlans)).thenReturn(FhirLookupResult.fromResources());
-
         Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
-
         Mockito.when(fhirClient.saveCarePlan(carePlan)).thenThrow(IllegalStateException.class);
 
-        
-
-        
         assertThrows(ServiceException.class, () -> subject.createCarePlan(carePlanModel));
     }
 
     @Test
     public void createCarePlan_populatesId() throws Exception {
         
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1);
+        CarePlanModel carePlanModel = buildCarePlanModel();
         carePlanModel.setId(new QualifiedId(CAREPLAN_ID_1));
 
         CarePlan carePlan = new CarePlan();
@@ -289,47 +223,43 @@ public class CarePlanServiceTest {
         Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
 
         Mockito.when(fhirClient.saveCarePlan(any())).thenReturn("1");
-
         
-        String result = subject.createCarePlan(carePlanModel);
-
+        subject.createCarePlan(carePlanModel);
         
         assertNull(carePlanModel.getId());
     }
-
+*/
 
     @Test
     public void createCarePlan_populatesSatisfiedUntil() throws Exception {
         
-        CarePlanModel carePlanModel = buildCarePlanModel(CPR_1, List.of(PLANDEFINITION_ID_1), List.of(QUESTIONNAIRE_ID_1));
+        CarePlanModel carePlanModel = buildCarePlanModel(List.of(PLANDEFINITION_ID_1), List.of(QUESTIONNAIRE_ID_1));
 
         CarePlan carePlan = new CarePlan();
         Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
 
         Mockito.when(fhirClient.lookupPatientByCpr(CPR_1)).thenReturn(Optional.empty());
 
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(FhirLookupResult.fromResource(buildQuestionnaire(QUESTIONNAIRE_ID_1)));
+        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(FhirLookupResult.fromResource(buildQuestionnaire()));
 
-        PlanDefinition planDefinition = buildPlanDefinition(PLANDEFINITION_ID_1);
+        PlanDefinition planDefinition = buildPlanDefinition();
         FhirLookupResult lookupResult = FhirLookupResult.fromResource(planDefinition);
         Mockito.when(fhirClient.lookupPlanDefinitionsById(List.of(PLANDEFINITION_ID_1))).thenReturn(lookupResult);
 
         var questionnaireThreshold = new ThresholdModel();
-        PlanDefinitionModel planDefinitionModel = buildPlanDefinitionModel(QUESTIONNAIRE_ID_1, questionnaireThreshold);
+        buildPlanDefinitionModel(QUESTIONNAIRE_ID_1, questionnaireThreshold);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
         Mockito.when(dateProvider.today()).thenReturn(Date.from(POINT_IN_TIME));
-
         
-        String result = subject.createCarePlan(carePlanModel);
-
+        subject.createCarePlan(carePlanModel);
         
-        var wrapper = carePlanModel.getQuestionnaires().get(0);
+        var wrapper = carePlanModel.getQuestionnaires().getFirst();
         var expectedPointInTime = new FrequencyEnumerator(wrapper.getFrequency()).getSatisfiedUntilForInitialization(dateProvider.now());
         assertEquals(expectedPointInTime, wrapper.getSatisfiedUntil());
         assertEquals(expectedPointInTime, carePlanModel.getSatisfiedUntil());
     }
-*/
+
 
     @Test
     public void getCarePlanByCpr_carePlansPresent_returnsCarePlans() throws Exception {
@@ -403,61 +333,34 @@ public class CarePlanServiceTest {
 
     @Test
     public void getCarePlansWithUnsatisfiedSchedules_carePlansMissing_returnsEmptyList() throws Exception {
-
         boolean onlyActiveCarePlans = true;
         boolean unsatisfied = true;
-        int pageNumber = 1;
-        int pageSize = 4;
-        Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
 
+        Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
         Mockito.when(fhirClient.lookupCarePlans(POINT_IN_TIME, onlyActiveCarePlans, unsatisfied)).thenReturn(FhirLookupResult.fromResources());
 
-
-        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied, new Pagination(pageNumber, pageSize));
-
+        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied, new Pagination(1, 4));
 
         assertEquals(0, result.size());
     }
 
     @Test
     public void getCarePlansWithUnsatisfiedSchedules_translatesPagingParameters() throws Exception {
-
         boolean onlyActiveCarePlans = true;
         boolean unsatisfied = true;
-        int pageNumber = 3;
-        int pageSize = 4;
-        Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
 
+        Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
         Mockito.when(fhirClient.lookupCarePlans(POINT_IN_TIME, onlyActiveCarePlans, unsatisfied)).thenReturn(FhirLookupResult.fromResources());
 
-
-        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied, new Pagination(pageNumber, pageSize));
-
-
-    }
-
-    private static Stream<Arguments> getCarePlansWithUnsatisfiedSchedules_sortCareplans_byPatientName() {
-        HumanName a_a = new HumanName().addGiven("a").setFamily("a");
-        HumanName a_b = new HumanName().addGiven("a").setFamily("b");
-        HumanName b_a = new HumanName().addGiven("b").setFamily("a");
-        HumanName b_b = new HumanName().addGiven("b").setFamily("b");
-        return Stream.of(
-                //getPointInTime_initializedWithSeed
-                Arguments.of(a_a, a_b, List.of(a_a, a_b)),
-                Arguments.of(a_b, a_a, List.of(a_a, a_b)),
-                Arguments.of(b_a, b_b, List.of(b_a, b_b)),
-                Arguments.of(b_b, b_a, List.of(b_a, b_b))
-        );
+        List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied, new Pagination(3, 4));
     }
 
     @ParameterizedTest
     @MethodSource // arguments comes from a method that is name the same as the test
     public void getCarePlansWithUnsatisfiedSchedules_sortCareplans_byPatientName(HumanName name1, HumanName name2, List<HumanName> expectedOrder) throws Exception {
-
         boolean onlyActiveCarePlans = true;
         boolean unsatisfied = true;
-        int pageNumber = 1;
-        int pageSize = 4;
+
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
 
         CarePlan carePlan1 = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
@@ -477,9 +380,7 @@ public class CarePlanServiceTest {
         Mockito.when(fhirMapper.mapCarePlan(carePlan2, lookupResult, ORGANISATION_ID_2)).thenReturn(carePlanModel2);
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-
         List<CarePlanModel> result = subject.getCarePlansWithFilters(onlyActiveCarePlans, unsatisfied);
-
 
         assertEquals(2, result.size());
         assertEquals(expectedOrder.get(0).getGivenAsSingleString(), result.get(0).getPatient().getGivenName());
@@ -490,48 +391,30 @@ public class CarePlanServiceTest {
 
     @Test
     public void getCarePlanById_carePlanPresent_returnsCarePlan() throws Exception {
-
         String carePlanId = "CarePlan/careplan-1";
         String patientId = "Patient/patient-1";
-
         CarePlan carePlan = buildCarePlan(carePlanId, patientId);
         CarePlanModel carePlanModel = setupCarePlan(carePlan);
-
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
-
-
         Optional<CarePlanModel> result = subject.getCarePlanById(carePlanId);
-
-
         assertEquals(carePlanModel, result.get());
     }
 
     @Test
     public void getCarePlanById_carePlanForDifferentOrganization_throwsException() throws Exception {
-
         String carePlanId = "CarePlan/careplan-1";
         String patientId = "Patient/patient-1";
-
         CarePlan carePlan = buildCarePlan(carePlanId, patientId);
         Mockito.when(fhirClient.lookupCarePlanById(carePlan.getId())).thenReturn(FhirLookupResult.fromResource(carePlan));
-
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(carePlan);
-
-
         assertThrows(AccessValidationException.class, () -> subject.getCarePlanById(carePlanId));
     }
 
     @Test
     public void getCarePlanById_carePlanMissing_returnsEmpty() throws Exception {
-
         String carePlanId = CAREPLAN_ID_1;
-
         Mockito.when(fhirClient.lookupCarePlanById(carePlanId)).thenReturn(FhirLookupResult.fromResources());
-
-
         Optional<CarePlanModel> result = subject.getCarePlanById(carePlanId);
-
-
         assertFalse(result.isPresent());
     }
 
@@ -546,19 +429,16 @@ public class CarePlanServiceTest {
 
     @Test
     public void resolveAlarm_accessViolation_throwsException() throws Exception {
-
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(FhirLookupResult.fromResources(carePlan));
 
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(carePlan);
-
 
         assertThrows(AccessValidationException.class, () -> subject.resolveAlarm(CAREPLAN_ID_1, QUESTIONNAIRE_ID_1));
     }
 
     @Test
     public void resolveAlarm_carePlanSatisfiedIntoTheFuture_throwsException() throws Exception {
-
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(lookupResult);
@@ -569,7 +449,6 @@ public class CarePlanServiceTest {
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
-
 
         assertThrows(ServiceException.class, () -> subject.resolveAlarm(CAREPLAN_ID_1, QUESTIONNAIRE_ID_1));
     }
@@ -587,16 +466,13 @@ public class CarePlanServiceTest {
                 buildQuestionnaireWrapperModel(QUESTIONNAIRE_ID_1, POINT_IN_TIME.minusSeconds(100)),
                 buildQuestionnaireWrapperModel(QUESTIONNAIRE_ID_2, POINT_IN_TIME.plusSeconds(100))
         ));
+
         Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
-
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
-
         Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-
         subject.resolveAlarm(CAREPLAN_ID_1, QUESTIONNAIRE_ID_1);
-
 
         // Verify that the first questionnaire has its satisfied-timestamp pushed to the next scheduled weekday,
         // the second questionnaire has its timestamp left untouched, and the careplan has its timestamp set to
@@ -610,7 +486,6 @@ public class CarePlanServiceTest {
 
     @Test
     public void completeCareplan_NoQuestionnaireResponses_and_satisfiedSchedule_ShouldBeCompleted() throws ServiceException {
-
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         FhirLookupResult careplanResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(careplanResult);
@@ -646,7 +521,6 @@ public class CarePlanServiceTest {
 
     @Test
     public void completeCareplan_unsatisfiedSchedule_ShouldThrowError() throws ServiceException {
-
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1, PATIENT_ID_1);
         FhirLookupResult careplanResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(careplanResult);
@@ -656,7 +530,6 @@ public class CarePlanServiceTest {
 
         carePlan.setExtension(List.of(ExtensionMapper.mapCarePlanSatisfiedUntil(Instant.now().minus(1, ChronoUnit.DAYS))));
 
-        //Action and assert
         try {
             subject.completeCarePlan(CAREPLAN_ID_1);
             fail("Careplan should be failing due to questionnaireresponses on careplan");
@@ -668,16 +541,11 @@ public class CarePlanServiceTest {
 
     @Test
     public void updateCarePlan_questionnaireAccessViolation_throwsException() throws Exception {
-
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
         Map<String, FrequencyModel> frequencies = Map.of();
         PatientDetails patientDetails = buildPatientDetails();
-
-        String patientPrimaryPhone = "12345678";
-        String patientSecondaryPhone = "87654321";
-        ContactDetailsModel patientPrimaryContactDetails = new ContactDetailsModel();
 
         PlanDefinition planDefinition = new PlanDefinition();
         Mockito.when(fhirClient.lookupPlanDefinitionsById(planDefinitionIds)).thenReturn(FhirLookupResult.fromResource(planDefinition));
@@ -687,13 +555,11 @@ public class CarePlanServiceTest {
         Mockito.doNothing().when(accessValidator).validateAccess(List.of(planDefinition));
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(List.of(questionnaire));
 
-
         assertThrows(AccessValidationException.class, () -> subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails));
     }
 
     @Test
     public void updateCarePlan_carePlanAccessViolation_throwsException() throws Exception {
-
         String carePlanId = "CarePlan/careplan-1";
         List<String> planDefinitionIds = List.of();
         List<String> questionnaireIds = List.of();
@@ -705,19 +571,17 @@ public class CarePlanServiceTest {
 
         CarePlan carePlan = new CarePlan();
         carePlan.setId(carePlanId);
+
         Mockito.when(fhirClient.lookupCarePlanById(carePlanId)).thenReturn(FhirLookupResult.fromResource(carePlan));
         Mockito.when(fhirClient.lookupQuestionnairesById(List.of())).thenReturn(FhirLookupResult.fromResources());
-
         Mockito.doNothing().when(accessValidator).validateAccess(List.of());
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(carePlan);
-
 
         assertThrows(AccessValidationException.class, () -> subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails));
     }
 
     @Test
     public void updateCarePlan_transfersThresholdsFromPlanDefinition() throws Exception {
-
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
@@ -744,23 +608,18 @@ public class CarePlanServiceTest {
         carePlanModel.setPatient(patientModel);
         FhirLookupResult carePlanResult = FhirLookupResult.fromResources(carePlan, patient, planDefinition);
 
-        var orgId = "";
-
-        // Mock
         Mockito.when(fhirClient.lookupPlanDefinitionsById(planDefinitionIds)).thenReturn(planDefinitionResult);
         Mockito.when(fhirMapper.mapPlanDefinitionResult(planDefinition, planDefinitionResult)).thenReturn(planDefinitionModel);
         Mockito.when(fhirClient.lookupQuestionnairesById(questionnaireIds)).thenReturn(FhirLookupResult.fromResource(questionnaire));
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(carePlanResult);
-        Mockito.when(fhirMapper.mapPatient(patient, orgId)).thenReturn(patientModel);
+        Mockito.when(fhirMapper.mapPatient(patient, "")).thenReturn(patientModel);
         Mockito.when(fhirMapper.mapPatientModel(patientModel)).thenReturn(patient);
         Mockito.when(fhirMapper.mapCarePlan(carePlan, carePlanResult, ORGANISATION_ID_1)).thenReturn(carePlanModel);
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
         Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources());
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-
         subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
-
 
         assertEquals(1, carePlanModel.getQuestionnaires().size());
         assertEquals(threshold, carePlanModel.getQuestionnaires().getFirst().getThresholds().getFirst());
@@ -768,7 +627,6 @@ public class CarePlanServiceTest {
 
     @Test
     public void updateCarePlan_updatesPatientDetails() throws Exception {
-
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
@@ -791,9 +649,8 @@ public class CarePlanServiceTest {
         FhirLookupResult carePlanResult = FhirLookupResult.fromResources(carePlan, patient, planDefinition);
         Mockito.when(fhirClient.lookupCarePlanById(CAREPLAN_ID_1)).thenReturn(carePlanResult);
 
-        var orgId = "";
         PatientModel patientModel = buildPatientModel();
-        Mockito.when(fhirMapper.mapPatient(patient, orgId)).thenReturn(patientModel);
+        Mockito.when(fhirMapper.mapPatient(patient, "")).thenReturn(patientModel);
         Mockito.when(fhirMapper.mapPatientModel(patientModel)).thenReturn(patient);
 
         CarePlanModel carePlanModel = buildCarePlanModel(planDefinitionIds, questionnaireIds);
@@ -804,9 +661,7 @@ public class CarePlanServiceTest {
         Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources());
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-
         subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
-
 
         assertEquals(patientDetails.getPatientPrimaryPhone(), patientModel.getContactDetails().getPrimaryPhone());
         assertEquals(patientDetails.getPatientSecondaryPhone(), patientModel.getContactDetails().getSecondaryPhone());
@@ -816,7 +671,6 @@ public class CarePlanServiceTest {
 
     @Test
     public void updateCarePlan_updatesFrequency_keepsMaxOf_currentSatistiedUntil_and_newCalculated() throws Exception {
-
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
@@ -826,7 +680,6 @@ public class CarePlanServiceTest {
         PlanDefinition planDefinition = new PlanDefinition();
         FhirLookupResult planDefinitionResult = FhirLookupResult.fromResource(planDefinition);
         Mockito.when(fhirClient.lookupPlanDefinitionsById(planDefinitionIds)).thenReturn(planDefinitionResult);
-
 
         var threshold = new ThresholdModel();
         PlanDefinitionModel planDefinitionModel = buildPlanDefinitionModel(QUESTIONNAIRE_ID_1, threshold);
@@ -844,9 +697,7 @@ public class CarePlanServiceTest {
         PrimaryContactModel primaryContactModel = new PrimaryContactModel();
         primaryContactModel.setOrganisation(buildReference().getReference());
 
-
         patientModel.setPrimaryContact(primaryContactModel);
-
 
         Mockito.when(fhirMapper.mapPatient(patient, ORGANISATION_ID_1)).thenReturn(patientModel);
 
@@ -871,7 +722,6 @@ public class CarePlanServiceTest {
 
         subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
 
-
         //assertTrue(nextNextSatisfiedUntilTime.isBefore(POINT_IN_TIME));
         assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getQuestionnaires().getFirst().getSatisfiedUntil());
         assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getSatisfiedUntil());
@@ -879,7 +729,6 @@ public class CarePlanServiceTest {
 
     @Test
     public void updateCarePlan_updatesFrequency_multipleDays_keepsSatisfiedUntil() throws Exception {
-
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_1);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_1);
@@ -920,9 +769,7 @@ public class CarePlanServiceTest {
         Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources());
         Mockito.when(fhirClient.getOrganizationId()).thenReturn(ORGANISATION_ID_1);
 
-
         subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
-
 
         assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getQuestionnaires().getFirst().getSatisfiedUntil());
         assertEquals(nextNextSatisfiedUntilTime, carePlanModel.getSatisfiedUntil());
@@ -930,7 +777,6 @@ public class CarePlanServiceTest {
 
     @Test
     void updateCarePlan_removeQuestionnaire_withExeededDeadline_throwsError() throws Exception {
-
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_2);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_2);
@@ -955,7 +801,6 @@ public class CarePlanServiceTest {
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME.plusSeconds(1L));
 
-
         try {
             subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
             fail("No error was thrown");
@@ -966,7 +811,6 @@ public class CarePlanServiceTest {
 
     @Test
     void updateCarePlan_removeQuestionnaire_withUnansweredQuestionnaireResponses_throwsError() throws Exception {
-
         String carePlanId = "careplan-1";
         List<String> planDefinitionIds = List.of(PLANDEFINITION_ID_2);
         List<String> questionnaireIds = List.of(QUESTIONNAIRE_ID_2);
@@ -995,7 +839,6 @@ public class CarePlanServiceTest {
         questionnaireResponse.setQuestionnaire(QUESTIONNAIRE_ID_1); // unanswered response for questionnaire that is removed
         Mockito.when(fhirClient.lookupQuestionnaireResponsesByStatusAndCarePlanId(List.of(ExaminationStatus.NOT_EXAMINED), carePlanId)).thenReturn(FhirLookupResult.fromResources(questionnaireResponse));
 
-
         try {
             subject.updateCarePlan(carePlanId, planDefinitionIds, questionnaireIds, frequencies, patientDetails);
             fail("No error was thrown");
@@ -1015,34 +858,29 @@ public class CarePlanServiceTest {
         carePlanModel.setPatient(new PatientModel());
         carePlanModel.getPatient().setCpr(CPR_1);
         carePlanModel.setPlanDefinitions(List.of());
-        if (planDefinitionIds != null) {
+        if(planDefinitionIds != null) {
             carePlanModel.setPlanDefinitions(planDefinitionIds.stream().map(this::buildPlanDefinitionModel).toList());
         }
         carePlanModel.setQuestionnaires(List.of());
-        if (questionnaireIds != null) {
+        if(questionnaireIds != null) {
             carePlanModel.setQuestionnaires(questionnaireIds.stream().map(this::buildQuestionnaireWrapperModel).toList());
         }
 
-        return carePlanModel;
-    }
+        return carePlanModel;}
 
     private PatientModel buildPatientModel() {
         PatientModel patientModel = new PatientModel();
-
         patientModel.setId(new QualifiedId(CarePlanServiceTest.PATIENT_ID_1));
         patientModel.setContactDetails(this.buildContactDetails());
         patientModel.setPrimaryContact(this.buildPrimaryContact());
-
         return patientModel;
     }
 
     private PrimaryContactModel buildPrimaryContact() {
         var primaryContact = new PrimaryContactModel();
-
         primaryContact.setName("Poul");
         primaryContact.setOrganisation(this.buildReference().getReference());
         primaryContact.setAffiliation("Onkel");
-
         return primaryContact;
     }
 
@@ -1052,12 +890,10 @@ public class CarePlanServiceTest {
 
     private PatientModel buildPatientModel(String patientId, String givenName, String familyName) {
         PatientModel patientModel = new PatientModel();
-
         patientModel.setId(new QualifiedId(patientId));
         patientModel.setContactDetails(new ContactDetailsModel());
         patientModel.setGivenName(givenName);
         patientModel.setFamilyName(familyName);
-
         return patientModel;
     }
 
@@ -1067,34 +903,27 @@ public class CarePlanServiceTest {
 
     private QuestionnaireWrapperModel buildQuestionnaireWrapperModel(String questionnaireId, Instant satisfiedUntil) {
         var model = new QuestionnaireWrapperModel();
-
         model.setQuestionnaire(new QuestionnaireModel());
         model.getQuestionnaire().setId(new QualifiedId(questionnaireId));
-
         FrequencyModel frequencyModel = new FrequencyModel();
         frequencyModel.setWeekdays(List.of(Weekday.TUE));
         frequencyModel.setTimeOfDay(LocalTime.parse("04:00"));
         model.setFrequency(frequencyModel);
         model.setSatisfiedUntil(satisfiedUntil);
-
         return model;
     }
 
     private PlanDefinitionModel buildPlanDefinitionModel(String planDefinitionId) {
         var model = new PlanDefinitionModel();
-
         model.setId(new QualifiedId(planDefinitionId));
-
         return model;
     }
 
     private CarePlanModel setupCarePlan(CarePlan carePlan) throws ServiceException {
         Mockito.when(fhirClient.lookupCarePlanById(carePlan.getId())).thenReturn(FhirLookupResult.fromResource(carePlan));
-
         CarePlanModel carePlanModel = new CarePlanModel();
         carePlanModel.setId(new QualifiedId(carePlan.getId()));
         Mockito.when(fhirMapper.mapCarePlan(any(CarePlan.class), any(FhirLookupResult.class), any(String.class))).thenReturn(carePlanModel);
-
         return carePlanModel;
     }
 
@@ -1104,7 +933,6 @@ public class CarePlanServiceTest {
 
     private CarePlan buildCarePlan(String carePlanId, String patientId, String questionnaireId) {
         CarePlan carePlan = new CarePlan();
-
         carePlan.setId(carePlanId);
         carePlan.setSubject(new Reference(patientId));
 
@@ -1122,16 +950,13 @@ public class CarePlanServiceTest {
 
     private FrequencyModel buildFrequencyModel(List<Weekday> weekdays, String timeOfDay) {
         FrequencyModel frequencyModel = new FrequencyModel();
-
         frequencyModel.setWeekdays(weekdays);
         frequencyModel.setTimeOfDay(LocalTime.parse(timeOfDay));
-
         return frequencyModel;
     }
 
     private Patient buildPatient(String patientId, String cpr) {
         Patient patient = new Patient();
-
         patient.setId(patientId);
 
         var identifier = new Identifier();
@@ -1181,32 +1006,25 @@ public class CarePlanServiceTest {
         return patientDetails;
     }
 
-    private PlanDefinition buildPlanDefinition(String planDefinitionId) {
+    private PlanDefinition buildPlanDefinition() {
         PlanDefinition planDefinition = new PlanDefinition();
-
-        planDefinition.setId(planDefinitionId);
-
+        planDefinition.setId(CarePlanServiceTest.PLANDEFINITION_ID_1);
         return planDefinition;
     }
 
     private PlanDefinitionModel buildPlanDefinitionModel(String questionnaireId, ThresholdModel questionnaireThreshold) {
         PlanDefinitionModel planDefinitionModel = new PlanDefinitionModel();
-
         QuestionnaireWrapperModel questionnaireWrapperModel = new QuestionnaireWrapperModel();
         questionnaireWrapperModel.setQuestionnaire(new QuestionnaireModel());
         questionnaireWrapperModel.getQuestionnaire().setId(new QualifiedId(questionnaireId));
         questionnaireWrapperModel.setThresholds(List.of(questionnaireThreshold));
-
         planDefinitionModel.setQuestionnaires(List.of(questionnaireWrapperModel));
-
         return planDefinitionModel;
     }
 
-    private Questionnaire buildQuestionnaire(String questionnaireId) {
+    private Questionnaire buildQuestionnaire() {
         Questionnaire questionnaire = new Questionnaire();
-
-        questionnaire.setId(questionnaireId);
-
+        questionnaire.setId(CarePlanServiceTest.QUESTIONNAIRE_ID_1);
         return questionnaire;
     }
 
